--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,9 @@
   </head>
 
   <body>
+    <% if cookies[:name] %>
+      <p>Current user: <%= cookies[:name] %> </p>
+    <% end %>
     <%= yield %>
   </body>
 </html>
