--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -10,6 +10,19 @@
  * files in this directory. Styles in this file should be added after the last require_* statement.
  * It is generally better to create a new file per style scope.
  *
- *= require_tree .
- *= require_self
  */
+
+@import "bootstrap-sprockets";
+@import "bootstrap";
+
+/* Forms */
+
+.btn {
+  margin-top: 15px;
+}
+
+.alert-danger {
+  padding-top: 10px;
+  padding-bottom: 10px;
+  border-radius: 3px;
+}
