--- a/app/views/events/new.html.erb
+++ b/app/views/events/new.html.erb
@@ -1,8 +1,17 @@
-<h1>New Event</h1>
+<div class="row">
+  <div class="col-xs-10 col-xs-offset-1 text-center"><h1>Create an event</h1></div>
+</div>
 
-<%= form_for(:event, url: events_create_path) do |f| %>
-  <%= f.label :name %>
-  <%= f.text_field :name %>
+<div class="row">
+  <div class="col-xs-10 col-xs-offset-1 col-md-6 col-md-offset-3">
+    <%= form_for(:event, url: events_create_path) do |f| %>
+      <%= f.label :name %>
+      <%= f.text_field :name, class: "form-control" %>
 
-  <%= f.submit "Create event" %>
-<% end %>
+      <%= f.label :date %>
+      <%= f.date_field :date, class: "form-control" %>
+
+      <%= f.submit "Create event", class: 'btn btn-primary btn-block' %>
+    <% end %>
+  </div>
+</div>
