--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,9 +1,34 @@
-<h1>Event</h1>
+<div class="row">
+  <div class="col-xs-10 col-xs-offset-1">
+    <h1>Event:</h1>
+  </div>
+  <div class="col-xs-10 col-xs-offset-2">
+    <h3>
+      <%= @event.name %>
+      <h4>Created by <%= @event.creator.name %></h4>
+    </h3>
+  </div>
+</div>
 
-<h2>
-  <%= @event.name %>
-</h2>
-<p>Created by <%= @event.creator.name %></p>
-<% @event.attendees.each do |attendee| %>
-    <li><%= link_to "#{attendee.name}", attendee %></li>
-<% end %>
+<div class="row">
+  <div class="col-xs-10 col-xs-offset-1">
+    <div class="panel panel-default">
+      <div class="panel-heading">
+        <h2 class="panel-title">Event Attendees</h2>
+      </div>
+      <ul class="list-group">
+        <% unless @event.attendees.empty? %>
+          <% @event.attendees.each do |attendee| %>
+            <li class="list-group-item">
+              <%= attendee.name %>
+            </li>
+          <% end %>
+        <% else %>
+          <li class="list-group-item">
+            No attendees yet.
+          </li>
+        <% end %>
+      </ul>
+    </div>
+  </div>
+</div>
