--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,16 +2,60 @@
 <html>
   <head>
     <title>RailsPrivateEvents</title>
-    <%= csrf_meta_tags %>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
+    <%= csrf_meta_tags %>
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
   <body>
+    <nav class="navbar navbar-inverse navbar-static-top">
+      <div class="container-fluid">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand">Private Events</a>
+          <p class="navbar-text">
+            Signed in as
+            <% if cookies[:name] %>
+              <%= cookies[:name] %>
+            <% end %>
+          </p>
+        </div>
+
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+          <ul class="nav navbar-nav">
+            <li><%= link_to "Users", users_path %></li>
+            <li><%= link_to "Events", events_path %></li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+
     <% if cookies[:name] %>
       <p>Current user: <%= cookies[:name] %> </p>
     <% end %>
-    <%= yield %>
+    
+    <div class="container">
+      <div class='row'>
+        <div class='col-xs-10 col-xs-offset-1 col-md-6 col-md-offset-3 text-center'>
+          <% flash.each do |message_type, message| %>
+            <div class="alert-<%= message_type %>">
+              <%= message %>
+            </div>
+          <% end %>
+        </div>
+      </div>
+      
+      <%= yield %>
+    </div>
+  
   </body>
 </html>
