--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,8 +1,14 @@
-<h1>Sign up</h1>
+<div class="row">
+  <div class="col-xs-10 col-xs-offset-1 text-center"><h1>Sign up</h1></div>
+</div>
 
-<%= form_for(@user, url: users_create_path) do |f| %>
-  <%= f.label :name %>
-  <%= f.text_field :name %>
+<div class="row">
+  <div class="col-xs-10 col-xs-offset-1 col-md-6 col-md-offset-3">
+    <%= form_for(:user, url: users_create_path) do |f| %>
+      <%= f.label :name %>
+      <%= f.text_field :name, class: "form-control" %>
 
-  <%= f.submit "Create my account" %>
-<% end %>
+      <%= f.submit "Create my account", class: 'btn btn-primary btn-block' %>
+    <% end %>
+  </div>
+</div>
