--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,7 +23,7 @@
           </button>
           <a class="navbar-brand">Private Events</a>
           <p class="navbar-text">
-            Signed in as
+            Signed in as:
             <% if cookies[:name] %>
               <%= cookies[:name] %>
             <% end %>
@@ -39,10 +39,6 @@
       </div>
     </nav>
 
-    <% if cookies[:name] %>
-      <p>Current user: <%= cookies[:name] %> </p>
-    <% end %>
-    
     <div class="container">
       <div class='row'>
         <div class='col-xs-10 col-xs-offset-1 col-md-6 col-md-offset-3 text-center'>
@@ -53,7 +49,6 @@
           <% end %>
         </div>
       </div>
-      
       <%= yield %>
     </div>
   
