--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,4 +1,8 @@
 <div class="row">
+  <div class="col-xs-10 col-xs-offset-1 text-center"><h1>Users</h1></div>
+</div>
+
+<div class="row">
   <div class="col-xs-10 col-xs-offset-1">
     <div class="panel panel-default">
       <div class="panel-heading">
